--- a/LambdaTimeline/Resources/Info.plist
+++ b/LambdaTimeline/Resources/Info.plist
@@ -33,6 +33,8 @@
 	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>In order to allow you to add photos to posts</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Timeline needs to access your microphone in order to create a new audio recorder </string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
